examples/test/testpolicy8430.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8430
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key31: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value42
          key43: value15
          key11: value16
      podSelector:
        matchLabels:
          key27: value8
